html page corrections

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 							<li>
 								<a href="#">Collection</a>
 								<ul>
-									<li><a href="Mens.html">Men</a></li>
-									<li><a href="Womens.html">Women</a></li>
+									<li><a href="mens.html">Men</a></li>
+									<li><a href="womens.html">Women</a></li>
 									<li>
 										<a href="accessories.html">Accessories</a>
 										<ul>
